--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,9 +1,3 @@
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .login-verifying {
   height: 40%;
   width: 100%;
